--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <title>Кандидаты «Штаба Зюзино» по избирательным участкам</title>
-  <link href="styles.css" rel="stylesheet"></head>
+  <link href="styles-e70b922e846808d6824e.css" rel="stylesheet"></head>
   <body>
     <main>
       <h1>
@@ -14,5 +14,5 @@
       <div id="buildings-list" class="hidden"></div>
       <div id="result" class="hidden"></div>
     </main>
-  <script type="text/javascript" src="polling-stations.js"></script></body>
+  <script type="text/javascript" src="polling-stations-e70b922e846808d6824e.js"></script></body>
 </html>
